# video_streaming

./: README.md
.github/workflows/: feat.yaml
media/: .gitignore  README.md
media/Media_Engine/: CMakeLists.txt
media/Media_Engine/Media_Engine/: CMakeLists.txt  Media_Engine.cpp  Media_Engine.hpp
media/Media_Engine/Media_Engine/include/ICE/: ICEProcessor.hpp  SDP.hpp  SDPParser.hpp
media/Media_Engine/Media_Engine/src/: CMakeLists.txt
media/Media_Engine/Media_Engine/src/ICE/: Attribute.cpp  CMakeLists.txt  Media.cpp  Origin.cpp  SDP.cpp
signal/: README.md
web_page/: README.md
web_server/: .gitignore  README.md  manage.py
web_server/accounts/: models.py  serializers.py  urls.py  views.py
web_server/accounts/migrations/: 0001_initial.py
web_server/requirements/: common.txt
web_server/streaming/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  views.py
web_server/streaming/migrations/: 0001_initial.py  0002_alter_room_options.py  0003_alter_room_room_id_alter_room_streamer_id.py
web_server/streaming/templates/streaming/: test.html
web_server/web_server/: asgi.py  urls.py  wsgi.py
web_server/web_server/settings/: common.py
